projects/compiler/test/parser/match_error_case_no_case.out
Error at %FILE_NAME%:1:25
Unexpected token '=>', expected one of '}', 'int', 'float', 'true', 'string', 'identifier', 'else':
  |  match foo { A.B => 123, => 456 }
                             ^